--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -1,7 +1,7 @@
 configMap:
-  db_host: expense-dev.czn6yzxlcsiv.us-east-1.rds.amazonaws.com
+  db_host: expense-dev.cly6g8y0co1a.us-east-1.rds.amazonaws.com
 deployment:
-  imageURL: 315069654700.dkr.ecr.us-east-1.amazonaws.com/expense/dev/backend
+  imageURL: 147997135309.dkr.ecr.us-east-1.amazonaws.com/expense/dev/backend
   imageVersion: IMAGE_VERSION
 hpa:
   cpuUtilization: 20
