--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -2,6 +2,6 @@ configMap:
   db_host: expense-dev.cly6g8y0co1a.us-east-1.rds.amazonaws.com
 deployment:
   imageURL: 147997135309.dkr.ecr.us-east-1.amazonaws.com/expense/dev/backend
-  imageVersion: 1.0.0
+  imageVersion: IMAGE_VERSION
 hpa:
   cpuUtilization: 20
